# imi_assignment_2

./: .gitignore  README.md  pyproject.toml
doc/: report.typ
src/imi_assignment_2/: __main__.py  adaboost.py  decision_stump.py  kernel.py  kernel_k_means.py
test/: test_adaboost.py  test_kernel_k_means.py
